<resources>
    <string name="app_name">Food Order</string>
    <string name="btn_place_order">Place Food Order</string>
    <string name="btn_contact">Restaurant Contact</string>
    <string name="btn_notification">Order Notification</string>
    <string name="hint_name">Customer Name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_address">Address</string>
    <string name="btn_submit_order">Submit Order</string>
    <string name="hint_order_id">Enter Order ID</string>
    <string name="btn_get_status">Get Status</string>
</resources>